--- a/项目部署文档.md
+++ b/项目部署文档.md
@@ -172,7 +172,11 @@ docker exec -it elasticsearch /bin/bash
 ```
 
 ```shell
-./bin/elasticsearch-plugin install https://github.com/medcl/elasticsearch-analysis-ik/releases/download/v7.9.2/elasticsearch-analysis-ik-7.9.2.zip
+curl -o /tmp/elasticsearch-analysis-ik-7.9.2.zip https://get.infini.cloud/elasticsearch/analysis-ik/7.9.2
+```
+
+```
+./bin/elasticsearch-plugin install file:///tmp/elasticsearch-analysis-ik-7.9.2.zip
 ```
 
 ps: `安装的ik分词器的版本一定要与elasticsearch的版本保持一致`
